--- a/frontend/admin/index.html
+++ b/frontend/admin/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/ChatGPT Image 2025년 10월 13일 오후 03_14_22.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>TableTopia</title>
   </head>
   <body>
     <div id="root"></div>
